# spiermint

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
spiermint/: __init__.py  _model.py  cli.py  scoring.py
spiermint/_mint/: __init__.py  axial_attention.py  data.py  modules.py  multihead_attention.py  rotary_embedding.py
spiermint/_mint/model/: __init__.py  esm2.py
spiermint/data/: __init__.py  esm2_t33_650M_UR50D.json
